<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avatar"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_avatar"/>

            <LinearLayout
                android:id="@+id/layout_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nama_pasien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/nama"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/layout_nomor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_nomor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/label_nomor"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                    <View
                        android:layout_width="5dp"
                        android:layout_height="5dp"/>

                    <TextView
                        android:id="@+id/nomor_pasien"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/nomor"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_alamat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_alamat"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                    <View
                        android:layout_width="5dp"
                        android:layout_height="5dp"/>

                    <TextView
                        android:id="@+id/alamat_pasien"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/alamat"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>