<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:padding="13dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/sign_in"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/title"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/username"
                android:gravity="center"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="40dp"
                android:layout_below="@id/username"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/password"
                android:gravity="center"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/btn_login"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_login"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"/>

<!--            <TextView-->
<!--                android:id="@+id/result"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="No Result"-->
<!--                android:textColor="@color/background"-->
<!--                android:textSize="20sp"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_below="@id/btn_login"-->
<!--                android:layout_centerHorizontal="true"/>-->

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>