<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/detail_pasien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/nama"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_alignParentTop="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/detail_pasien"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avatar"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/rounded_avatar"/>

            <LinearLayout
                android:id="@+id/layout_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nomor_pasien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/nomor"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/gender_pasien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/gender"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/alamat_pasien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_edit_text"
        android:layout_below="@id/card_view"
        app:queryBackground="@android:color/transparent"
        app:queryHint="Pencarian Berdasarkan Nama"
        app:iconifiedByDefault="false"/>

    <ListView
        android:id="@+id/list_patient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/search_view"
        tools:listitem="@layout/card_document"/>

</RelativeLayout>